// Copyright (C) 2023, Berachain Foundation. All rights reserved.
// See the file LICENSE for licensing terms.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";
package stargazer.evm.v1alpha1;

import "gogoproto/gogo.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/berachain/stargazer/x/evm/types";

// `Params` defines the parameters for the x/evm module.
message Params {
  // `evm_denom` represents the token denomination used as the native token
  // within the EVM.
  string evm_denom = 1 [(gogoproto.moretags) = "yaml:\"evm_denom\""];

  // `extra_eips` defines a list of additional EIPs for the vm.Config
  repeated int64 extra_eips = 2 [
    (gogoproto.customname) = "ExtraEIPs",
    (gogoproto.moretags) = "yaml:\"extra_eips\""
  ];

  // `chain_config` represents the ethereum chain config for the stargazer
  // EVM
  google.protobuf.Struct chain_config = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"chain_config\""
  ];
}
